# classical-agent

./: .env  main.py  pyproject.toml
app/: llm.py
app/agents/: plan_and_solve_agent.py  react_agent.py  reflection_agent.py
app/agents/tools/: search.py
app/tools/: __init__.py  tool_executor.py
demo/: my_simple_agent.py  vector_score.py
hello-agents/core/: agent.py  config.py
hello_agents/agents/: __init__.py  simple_agent.py
hello_agents/core/: __init__.py  llm.py  message.py
hello_agents/memory/: base.py
hello_agents/memory/storage/: document_store.py
hello_agents/memory/types/: episodic.py  working.py
hello_agents/tools/: base.py  chian.py  registry.py
hello_agents/tools/builtin/: calculator.py  search.py
